--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'League+Spartan', sans-serif;
+    font-family: 'League', sans-serif;
 }
 
 h1 {
@@ -29,12 +29,12 @@ h4 {
 
 h3 {
     font-size: 28px;
-    color: black;
+    color: #38bff3;
 }
 
 h6 {   
     font-weight: 900;
-    font-size: 13.5px;
+    font-size: 20px;
 }
 
 .section-p1 {
@@ -62,8 +62,8 @@ body {
     left: 0;
 }
 #header .logo {
-    width: 300px;
-    height: 110px;
+    max-width: 350px;
+    height: 150px;
     margin-left: -55px;
     padding-left: 20px;
 }
@@ -83,7 +83,7 @@ body {
 #navbar li a {
     text-decoration: none;
     color: #fff;
-    font-size: 20px;
+    font-size: 30px;
     font-weight: 700;
     transition: 0.3s ease;
 }
@@ -102,6 +102,15 @@ body {
     position: absolute;
     bottom: -4px;
     left: 20px;
+}
+
+#mobile {
+    display: none;
+    align-items: center;
+}
+
+#close{
+    display: none;
 }
 
 #hero {
@@ -145,17 +154,17 @@ body {
     text-align: center;
     padding: 15px 0;
     box-shadow: 5px 5px 24px rgba(3, 147, 204, 0.323);
-    border-radius: 4px;
+    border-radius: 14px;
     margin: 15px 0;
 }
 
 #feature .feature-box {
-    width: 180px;
+    width: 200px;
     text-align: center;
     padding: 25px 15px;
     box-shadow: 0 5px 15px rgba(3, 147, 204, 0.999);
-    border-radius: 4px;
-    margin: 15px 0;
+    border-radius: 14px;
+    margin: 15px 100px;
 }
 
 #feature .feature-box img {
@@ -165,7 +174,7 @@ body {
 }
 
 #feature .feature-box h6 {
-    margin-top: 10px; 
+    margin-top: 30px; 
 }
 
 #product1 {
@@ -211,6 +220,7 @@ body {
     padding-top: 7px;
     color: black;
     font-size: 29px;
+    margin-bottom: 30px;
 }
 
 #product1 .pro .cart {
@@ -225,40 +235,282 @@ body {
     right: 30px;
 }
 
-.footer {
+footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     background-color: #38bff3;
-}
-
-.footer .column {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    margin-bottom: 20px;
-}
-
-.footer-logo {
-    max-width: 300px; 
     height: auto;
 }
 
-.footer .h4 {
+footer .col {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-right: 85px;
+    text-align: center;
+}
+
+footer .col:last-child {
+    margin-right: 250px;
+}
+
+footer .logo {
+    height: 200px;
+    width: auto;
+    margin-right: 100px;
+    margin-bottom: 30px;
+}
+
+footer h4 {
     color: white;
-    font-size: 20px;
+    font-size: 50px;
     font-weight: 700;
     padding-bottom: 20px;
 }
 
-.footer .p {
-    font-size: 13px;
-    margin: 0 0 8px 0;
+footer p {
+    font-size: 26px;
+    margin: 10px 0 8px 0;
 }
 
-.footer .a {
-    font-size: 13px;
+footer a {
+    font-size: 26px;
     text-decoration: none;
     color: black;
     margin-bottom: 10px;
 }
+
+/*SHOP PAGE*/
+#page-header {
+    background-image: url("img/water-glass-outdoor.jpg");
+    width: 100%;
+    height: 50vh;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    text-align: left;
+    flex-direction: column;
+}
+
+#page-header h2 {
+    font-size: 100px;
+    margin-left: 30px;
+    color: #fff;
+    padding: 50px;
+    margin-top: 100px;
+}
+
+#page-header h2 span {
+    margin-bottom: 20px; 
+    display: block; 
+}
+
+/*Single Product */
+
+#prodetails {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+#prodetails .single-pro-image {
+    width: 35%;
+    margin-right: 50px;
+}
+
+.small-img-group {
+    display: flex;
+    justify-content: space-between;
+}
+
+.small-img-col {
+    flex-basis: 25%;
+    cursor: pointer;
+}
+
+#prodetails .single-pro-details {
+    width: 50%;
+    padding-top: 30px;
+}
+
+#prodetails .single-pro-details h6 {
+    font-size: 60px;
+}
+
+#prodetails .single-pro-details h4 {
+    padding: 40px 0 20px 0;
+    font-size: 40px;
+}
+
+#prodetails .single-pro-details h2 {
+    font-size: 50px;
+}
+
+#prodetails .single-pro-details select {
+    display: block;
+    padding: 5px 10px;
+    margin-bottom: 10px;
+}
+
+#prodetails .single-pro-details input {
+    width: 70px;
+    height: 60px;
+    padding-left: 10px;
+    font-size: 30px;
+    margin-right: 10px;
+}
+
+#prodetails .single-pro-details input:focus {
+    outline: none;
+}
+
+#prodetails .single-pro-details button {
+    font-size: 25px;
+    background-color: green;
+    color: white;
+    border: 0;
+    padding: 20px 30px;
+    border-radius: 20px;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+#prodetails .single-pro-details span {
+    font-size: 38px;
+    line-height: 55px;
+}
+
+
+@media (max-width:799px) {
+    .section-p1{
+        justify-content: center;
+    }
+    #navbar {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: fixed;
+        top: 0;
+        right: -300px;
+        height: 100vh;
+        width: 300px;
+        background-color: #0393ccd2;
+        box-shadow: 5px 5px 24px #0393ccd2;
+        padding: 80px 0 0 10px;
+        transition: 0.03s;
+    }
+
+    #navbar .active{
+        right: 0px;
+    }
+
+    #navbar li{
+        margin-bottom: 25px;
+    }
+
+    #mobile {
+        display: flex;
+        align-items: center;
+    }
+
+    footer {
+        justify-content: left;
+    }
+    
+    #mobile i {
+        color: #fff;
+        font-size: 25px;
+        padding-left: 25px;
+    }
+
+    #close {
+        display: initial;
+        position: absolute;
+        top: 30px;
+        left: 30px;
+        color: #222;
+        font-size: 25px;
+    }
+
+    #lg-bag{
+        display: none;
+    }
+
+    #hero {
+        height: 70vh;
+        padding: 0px 80px;
+        background-position: top 30% right 30%;
+    }
+
+    #feature {
+        justify-content: center;
+    }
+
+    #feature .feature-box {
+        margin: 15px 15px;
+    }
+
+    #footer {
+        justify-content: center;
+    }
+}
+
+@media (max-width: 477px) {
+    .section-p1{
+        padding: 20px;
+    }
+
+    #header {
+        padding: 10px 30px;
+    }
+    
+    h1 {
+        font-size: 38px;
+    }
+
+    h2 {
+        font-size: 32px;
+    }
+
+    #hero {
+        padding: 0 20px;
+        background-position: 55%;
+    }
+
+    #feature {
+        justify-content: space-between;
+    }
+
+    #feature .feature-box {
+        width: 155px;
+        margin: 0 0 15px 0;
+    }
+
+    #product1 .pro {
+        width: 100%;
+        justify-content: center;
+    }
+
+    footer {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    /*Single Product*/
+    #prodetails {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #prodetails.single-pro-image {
+        width: 100%;
+        margin-right: 0px;
+    }
+
+    #prodetails.single-pro-details {
+        width: 100%;
+    }
+}
+
