--- a/style.css
+++ b/style.css
@@ -381,6 +381,48 @@ footer a {
     line-height: 55px;
 }
 
+/*About Page*/
+
+#hero-about {
+    background-image: url("img/banner4.png");
+    height: 50vh;
+    width: 100%;
+    margin: 0;
+    background-size: cover; 
+    background-position: center top;
+    background-repeat: no-repeat;
+    padding: 30px 30px;
+    display: flex; 
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+#hero-about h2 {
+    font-size: 160px;
+}
+
+#about-head {
+    display: flex;
+    align-items: center;
+}
+
+#about-head img {
+    width: 50%;
+    height: auto;
+}
+
+#about-head h1 {
+    font-size: 60px;
+    font-weight: 700;
+}
+
+
+#about-head p {
+    font-size: 45px;
+    margin: 10px 0 30px 0;
+    line-height: 5rem;
+}
 
 @media (max-width:799px) {
     .section-p1{
