--- a/style.css
+++ b/style.css
@@ -13,9 +13,10 @@ h1 {
 }
 
 h2 {
-    font-size: 75px;
+    font-size: 100px;
     line-height: 74px;
     color: #38bff3;
+    line-height: 6rem;
 }
 
 h2 span {
@@ -384,8 +385,8 @@ footer a {
 /*About Page*/
 
 #hero-about {
-    background-image: url("img/banner4.png");
-    height: 50vh;
+    background-image: url("img/hero.3.jpg");
+    height: 110vh;
     width: 100%;
     margin: 0;
     background-size: cover; 
@@ -400,6 +401,9 @@ footer a {
 
 #hero-about h2 {
     font-size: 160px;
+    color: black;
+    align-self: center;
+    margin-bottom: 80px;
 }
 
 #about-head {
@@ -412,9 +416,10 @@ footer a {
     height: auto;
 }
 
-#about-head h1 {
-    font-size: 60px;
+#about-head h2 {
+    font-size: 90px;
     font-weight: 700;
+    line-height: 8rem;
 }
 
 
@@ -422,6 +427,117 @@ footer a {
     font-size: 45px;
     margin: 10px 0 30px 0;
     line-height: 5rem;
+}
+
+/*Contact Us*/
+
+#contact-head img {
+    width: 100%;
+    height: auto;
+    border-radius: 15px;
+}
+
+#contact-details {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#contact-details .details {
+    width: 50%;
+}
+
+#contact-details .details h3 {
+    font-size: 50px;
+    font-weight: 700;
+    margin-bottom: 40px;
+}
+#contact-details .details h2 {
+    font-size: 65px;
+    margin-bottom: 50px;
+}
+
+#contact-details .details p {
+    font-size: 30px;
+    margin: 10px 0 30px 0;
+}
+
+li i {
+    font-size: 30px;
+}
+
+#contact-details .map {
+    width: 40%;
+    height: 50vh;
+    margin-bottom: 120px;
+}
+
+
+#form-details {
+    display: flex;
+    justify-content: space-between;
+    margin: 30px;
+}
+
+#form-details form {
+    width: 55%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 60px;
+}
+
+
+#form-details form h6 {
+    font-size: 40px;
+}
+
+
+#form-details form h2 {
+    line-height: 150%;
+}
+
+#form-details form input,
+#form-details form textarea {
+    width: 100%;
+    padding: 22px 20px;
+    outline: none;
+    margin-bottom: 20px;
+    border: 1px solid;
+    border-radius: 10px;
+}
+
+
+#form-details form button {
+    font-size: 25px;
+    background-color: green;
+    color: white;
+    border: 0;
+    padding: 20px 30px;
+    border-radius: 20px;
+    cursor: pointer;
+    margin-bottom: 20px;
+}
+
+    input[type="text"]::placeholder {
+    color: #999; 
+    font-style: italic; 
+    font-size: 26px;
+} 
+ 
+    textarea::placeholder {
+    color: #999;
+    font-style: italic;
+    font-size: 26px;
+}
+
+#form-details img {
+    width: 80vh;
+    height: 70vh;
+    margin-right: 40px;
+    margin-bottom: 20px;
+    border-radius: 15px;
 }
 
 @media (max-width:799px) {
@@ -554,5 +670,27 @@ footer a {
     #prodetails.single-pro-details {
         width: 100%;
     }
-}
 
+    /*about us*/
+
+    #about-head {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    #about-head img {
+        width: 100%;
+    }
+
+    #hero-about h2 {
+        line-height: 8rem;
+        padding-left: 30px;
+        font-size: 100px;
+    }
+
+    #about-head p {
+        font-size: 30px;
+    }
+}
