--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ body {
     display: none;
 }
 
-#hero {
+#hero-1 {
     background-image: url("img/Hero.2.jpg");
     height: 90vh;
     width: 100%;
@@ -129,7 +129,7 @@ body {
     justify-content: center;
 }
 
- #hero button {
+ #hero-1 button {
     background-image: url("img/h4.png");
     background-color: transparent;
     margin-top: 40px;
@@ -431,6 +431,33 @@ footer a {
 
 /*Contact Us*/
 
+
+#hero-contact {
+    background-image: url("img/banner.5.jpg");
+    height: 110vh;
+    width: 100%;
+    margin: 0;
+    background-size: cover; 
+    background-position: center top;
+    background-repeat: no-repeat;
+    padding: 30px 30px;
+    display: flex; 
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+#hero-contact {
+    text-align: left;
+}
+
+#hero-contact .title h2 {
+    font-size: 126px;
+    line-height: 15vh;
+   text-align: center;
+   padding-right: 100vh;
+}
+
 #contact-head img {
     width: 100%;
     height: auto;
@@ -448,17 +475,13 @@ footer a {
 }
 
 #contact-details .details h3 {
-    font-size: 50px;
-    font-weight: 700;
+    font-size: 80px;
+    font-weight: 800px;
     margin-bottom: 40px;
-}
-#contact-details .details h2 {
-    font-size: 65px;
-    margin-bottom: 50px;
 }
 
 #contact-details .details p {
-    font-size: 30px;
+    font-size: 43px;
     margin: 10px 0 30px 0;
 }
 
@@ -534,12 +557,110 @@ li i {
 
 #form-details img {
     width: 80vh;
-    height: 70vh;
+    height: 55vh;
     margin-right: 40px;
-    margin-bottom: 20px;
+    margin-top: 100px;
     border-radius: 15px;
 }
 
+/*Cart Page*/
+#hero {
+    background-image: url("img/cart1.jpg");
+    height: 80vh;
+    width: 100%;
+    margin: 0;
+    background-size: cover; 
+    background-position: center top;
+    background-repeat: no-repeat;
+    padding: 30px 30px;
+    display: flex; 
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+#hero h2 {
+    font-size: 135px;
+    line-height: 15vh;
+    text-align: center;
+    padding-right: 74vh;
+    padding-top: 17vh;
+}
+
+#cart table {
+    width: 100%;
+    border-collapse: collapse;
+    table-layout: fixed;
+    white-space: nowrap;
+}
+
+#cart table img {
+    width: 70px;
+}
+
+
+#cart table td:nth-child(1) {
+    width: 100px;
+    text-align: center;
+}
+
+#cart table td:nth-child(2) {
+    width: 150px;
+    text-align: center;
+}
+
+#cart table td:nth-child(3) {
+    width: 250px;
+    text-align: center;
+}
+
+#cart table td:nth-child(4),
+#cart table td:nth-child(5) {
+    width: 150px;
+    text-align: center;
+}
+
+#cart table td:nth-child(4) input{
+    width: 70px;
+    padding: 10px 5px 10px 15px;
+}
+
+#cart table thead {
+    border: 3px solid black;
+    border-left: none;
+    border-right: none;
+}
+
+#cart table thead td {
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 30px;
+    padding: 18px 0;
+}
+
+#cart table tbody tr td {
+    padding-top: 15px;
+}
+
+#cart table tbody tr td input{
+    height: 60px;
+    width: 60px;
+    font-size: 25px;
+}
+
+#cart table tbody td {
+    font-size: 25px; 
+}
+
+#total {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+#total table tr {
+    font-size: 30px;
+}
 @media (max-width:799px) {
     .section-p1{
         justify-content: center;
