--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h2 span {
 }
 
 h4 {
-    font-size: 33px;
+    font-size: 65px;
     color: black;
 }
 
@@ -178,6 +178,23 @@ body {
     margin-top: 30px; 
 }
 
+.hero2 {
+    width: 100%; 
+    height: 85vh;
+    overflow: hidden; 
+    position: relative;
+}
+.hero2 video {
+    width: 95%; 
+    height: auto; 
+    object-fit: contain; 
+    position: absolute;
+    top: 50%;
+    left: 3%;
+    margin-top: 30vh;
+    transform: translateY(-50%); 
+}
+
 #product1 {
     text-align: center;
     background-color: whitesmoke;
@@ -209,6 +226,8 @@ body {
 
 #product1 .pro img {
     width: 100%;
+    height: 85%;
+    object-fit: cover;
     border-radius: 20px;
 }
 
@@ -283,16 +302,6 @@ footer a {
 }
 
 /*SHOP PAGE*/
-#page-header {
-    background-image: url("img/water-glass-outdoor.jpg");
-    width: 100%;
-    height: 50vh;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    text-align: left;
-    flex-direction: column;
-}
 
 #page-header h2 {
     font-size: 100px;
@@ -472,6 +481,7 @@ footer a {
 
 #contact-details .details {
     width: 50%;
+    height: 60%;
 }
 
 #contact-details .details h3 {
@@ -482,7 +492,7 @@ footer a {
 
 #contact-details .details p {
     font-size: 43px;
-    margin: 10px 0 30px 0;
+    margin: 60px 0 40px 0;
 }
 
 li i {
@@ -491,15 +501,15 @@ li i {
 
 #contact-details .map {
     width: 40%;
-    height: 50vh;
-    margin-bottom: 120px;
+    height: 40vh;
+    margin-bottom: 180px;
 }
 
 
 #form-details {
     display: flex;
     justify-content: space-between;
-    margin: 30px;
+    margin: 60px;
 }
 
 #form-details form {
@@ -524,6 +534,7 @@ li i {
 #form-details form input,
 #form-details form textarea {
     width: 100%;
+    font-size: 25px;
     padding: 22px 20px;
     outline: none;
     margin-bottom: 20px;
@@ -557,110 +568,12 @@ li i {
 
 #form-details img {
     width: 80vh;
-    height: 55vh;
+    height: 65vh;
     margin-right: 40px;
-    margin-top: 100px;
+    margin-top: 10px;
     border-radius: 15px;
 }
 
-/*Cart Page*/
-#hero {
-    background-image: url("img/cart1.jpg");
-    height: 80vh;
-    width: 100%;
-    margin: 0;
-    background-size: cover; 
-    background-position: center top;
-    background-repeat: no-repeat;
-    padding: 30px 30px;
-    display: flex; 
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-}
-
-#hero h2 {
-    font-size: 135px;
-    line-height: 15vh;
-    text-align: center;
-    padding-right: 74vh;
-    padding-top: 17vh;
-}
-
-#cart table {
-    width: 100%;
-    border-collapse: collapse;
-    table-layout: fixed;
-    white-space: nowrap;
-}
-
-#cart table img {
-    width: 70px;
-}
-
-
-#cart table td:nth-child(1) {
-    width: 100px;
-    text-align: center;
-}
-
-#cart table td:nth-child(2) {
-    width: 150px;
-    text-align: center;
-}
-
-#cart table td:nth-child(3) {
-    width: 250px;
-    text-align: center;
-}
-
-#cart table td:nth-child(4),
-#cart table td:nth-child(5) {
-    width: 150px;
-    text-align: center;
-}
-
-#cart table td:nth-child(4) input{
-    width: 70px;
-    padding: 10px 5px 10px 15px;
-}
-
-#cart table thead {
-    border: 3px solid black;
-    border-left: none;
-    border-right: none;
-}
-
-#cart table thead td {
-    font-weight: 700;
-    text-transform: uppercase;
-    font-size: 30px;
-    padding: 18px 0;
-}
-
-#cart table tbody tr td {
-    padding-top: 15px;
-}
-
-#cart table tbody tr td input{
-    height: 60px;
-    width: 60px;
-    font-size: 25px;
-}
-
-#cart table tbody td {
-    font-size: 25px; 
-}
-
-#total {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-#total table tr {
-    font-size: 30px;
-}
 @media (max-width:799px) {
     .section-p1{
         justify-content: center;
