--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ h1 {
 }
 
 h2 {
+    text-align: center;
+    margin-top: 2vh;
     font-size: 100px;
     line-height: 74px;
     color: #38bff3;
@@ -39,7 +41,7 @@ h6 {
 }
 
 .section-p1 {
-    padding: 40px 80px;
+    padding: 80px 180px;
 }
 
 .section-m1 {
@@ -145,13 +147,14 @@ body {
 #feature {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
     justify-content: space-between;
 }
 #feature .feature-box:hover {
     box-shadow: 5px 5px 24px rgba(3, 147, 204, 0.323);
 }
 #feature .feature-box {
-    width: 190px;
+    width: 220px;
     text-align: center;
     padding: 15px 0;
     box-shadow: 5px 5px 24px rgba(3, 147, 204, 0.323);
@@ -159,18 +162,10 @@ body {
     margin: 15px 0;
 }
 
-#feature .feature-box {
-    width: 200px;
-    text-align: center;
-    padding: 25px 15px;
-    box-shadow: 0 5px 15px rgba(3, 147, 204, 0.999);
-    border-radius: 14px;
-    margin: 15px 100px;
-}
-
 #feature .feature-box img {
-    max-width: 100%;
+    width: 100%;
     height: auto;
+    max-width: 170px;
     border-radius: 50%; 
 }
 
@@ -178,22 +173,46 @@ body {
     margin-top: 30px; 
 }
 
+#hero1 {
+    background-image: url("img/water-glass-outdoor.jpg");
+    height: 75vh;
+    width: 100%;
+    margin: 0;
+    background-size: cover; 
+    background-position: center top;
+    background-repeat: no-repeat;
+    padding: 30px 30px;
+    display: flex; 
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
 .hero2 {
     width: 100%; 
-    height: 85vh;
+    height: 75vh;
     overflow: hidden; 
     position: relative;
 }
 .hero2 video {
-    width: 95%; 
-    height: auto; 
-    object-fit: contain; 
+    width: 42%;
+    height: auto;
+    object-fit: contain;
     position: absolute;
-    top: 50%;
+    top: 57%;
     left: 3%;
-    margin-top: 30vh;
-    transform: translateY(-50%); 
+    margin-top: 11vh;
+    transform: translate(68px, -130px) translateY(-50%);
+} 
+
+p.UF {
+    font-size: 42px;
+    text-align: center;
+    padding-right: 5vh;
+    margin-left: 110vh;
+    margin-top: 6vh;
 }
+
 
 #product1 {
     text-align: center;
@@ -226,13 +245,12 @@ body {
 
 #product1 .pro img {
     width: 100%;
-    height: 85%;
+    height: 90%;
     object-fit: cover;
     border-radius: 20px;
 }
 
 #product1 .pro .pro-info {
-    text-align: start;
     padding: 10px 0;
 }
 
